--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>{{page.title}} - {{site.name}}</title>
-  <link rel="stylesheet" href="{{site.baseurl}}/css/default.css" type="text/css">
+  
   <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet">
+  <link href="{{ "/assets/css/style.css" | relative_url }}" rel="stylesheet">
 </head>
 <body>
   <a href="{{site.baseurl}}{{post.url}}"><h1 class="post-title">{{post.title}}</h1></a>
