--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 *{
   padding: 0;
   margin: 0;
+  font-family: 'Lato', sans-serif;
+  color: #024775;
+
 }
 html,body{
   height: 100%;
 }
 body{
-  background-color: #FFFCF9;
+  background-color: #B8F2E6;
 
 }
 .container{
@@ -24,17 +27,48 @@ body{
   font-weight: 700;
   font-size: 50px;
 }
+.title2{
+  font-size: 30px;
+  font-weight: 400;
+}
 .bun{
-  font-weight: 300;
+  font-weight: 200;
   font-size: 25px;
+  text-align: left;
 }
 .item{
-  background-color: rgba(177,237,232,0);
+  background-color: rgba(255,255,255,0.5);
   border-radius: 2px;
-  width: 50%;
+  width: 70%;
   height: 80%;
 
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+
+}
+.item2{
+  
+}
+.hoge{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.wrapper{
+  display: flex;
+
+  flex-direction: row;
+  justify-content: space-around;
+}
+footer{
+  font-size: 15px;
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+  color: #000;
+  font-weight: 200;
+}
+a{
+  font-weight: 400;
+  font-size: 25px;
 }
